Fixed incorrect/missing margins for headings and paragraphs

--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -32,13 +32,14 @@ h1 {
   font-family: $font--sans;
   font-size: 2em;
   font-weight: 500;
-  margin: 0 0 1em;
+  margin: 0 0 0.5em;
 }
 
 h2 {
   font-family: $font--sans;
   font-size: 1em;
   font-weight: 500;
+  margin: 0 0 0.5em;
 }
 
 p {
